# anki-atlas

./: .act-event.json  .actrc  .env.example  .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PROMPT.md  README.md  docker-compose.yml  opencode.json  pyproject.toml  ralph.yml  run-ralph.sh  skills-lock.json
bins/api/: Cargo.toml
bins/api/src/: error.rs  lib.rs  main.rs  middleware.rs  router.rs  schemas.rs  services.rs  state.rs
bins/api/src/handlers/: duplicates.rs  health.rs  index_info.rs  jobs.rs  mod.rs  search.rs  sync.rs  topics.rs
bins/api/tests/: error_test.rs  handlers_test.rs  middleware_test.rs  project_cli_runtime_flows.rs  project_surface_flows.rs  schemas_test.rs
bins/api/tests/support/: mod.rs
bins/cli/: Cargo.toml
bins/cli/src/: args.rs  main.rs  output.rs  runtime.rs  tui.rs  usecases.rs
bins/cli/src/commands/: cardloop.rs  coverage.rs  duplicates.rs  gaps.rs  generate.rs  index.rs  migrate.rs  mod.rs  obsidian_sync.rs  search.rs  sync.rs  tag_audit.rs  topics.rs  validate.rs  version.rs  weak_notes.rs
bins/cli/src/tui/: app.rs  bootstrap.rs  input.rs  mod.rs  tasks.rs  tests.rs  widgets.rs
bins/cli/tests/: cli_integration.rs  content_workflows.rs
bins/mcp/: Cargo.toml
bins/mcp/src/: formatters.rs  handlers.rs  lib.rs  main.rs  server.rs  tools.rs
bins/mcp/tests/: formatters_test.rs  handlers_test.rs  server_test.rs  tools_test.rs
bins/perf-harness/: Cargo.toml
bins/perf-harness/src/: cli.rs  http.rs  jobs.rs  main.rs  report.rs  transactions.rs
bins/worker/: Cargo.toml
bins/worker/src/: main.rs  tasks.rs  worker.rs
bins/worker/src/config/: mod.rs  tests.rs
bins/worker/src/dispatcher/: mod.rs  tests.rs
bins/worker/src/envelope/: mod.rs  tests.rs
bins/worker/src/worker/: mod.rs  tests.rs
crates/analytics/: Cargo.toml
crates/analytics/benches/: analytics_hot_paths.rs
crates/analytics/src/: coverage.rs  duplicates.rs  error.rs  forecast.rs  labeling.rs  lib.rs  repository.rs  service.rs  taxonomy.rs
crates/anki-reader/: Cargo.toml
crates/anki-reader/src/: connect.rs  lib.rs  models.rs  normalizer.rs  reader.rs
crates/anki-reader/tests/: test_connect.rs  test_models.rs  test_normalizer.rs  test_reader.rs
crates/anki-sync/: Cargo.toml
crates/anki-sync/src/: core.rs  engine.rs  lib.rs  progress.rs  recovery.rs  state.rs
crates/anki-sync/tests/: test_core.rs  test_engine.rs  test_progress.rs  test_recovery.rs  test_state.rs
crates/card/: Cargo.toml
crates/card/src/: lib.rs  mapping.rs  models.rs  registry.rs  slug.rs
crates/card/tests/: test_mapping.rs  test_models.rs  test_registry.rs
crates/cardloop/: Cargo.toml
crates/cardloop/src/: cluster.rs  error.rs  lib.rs  models.rs  progression.rs  queue.rs  store.rs
crates/cardloop/src/scanners/: audit.rs  fsrs.rs  generation.rs  llm_review.rs  mod.rs  stale.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  logging.rs  types.rs
crates/common/tests/: config_test.rs  error_test.rs  logging_test.rs  types_test.rs
crates/database/: Cargo.toml
crates/database/migrations/: 002_pg_trgm_lexical_search.sql  003_knowledge_graph.sql
crates/database/src/: connection.rs  lib.rs  migrations.rs  pool.rs
crates/database/tests/: database_tests.rs
crates/generator/: Cargo.toml
crates/generator/src/: error.rs  lib.rs  models.rs
crates/generator/src/agents/: llm_enhancer.rs  llm_generator.rs  llm_validator.rs  mod.rs  tests.rs
crates/generator/src/apf/: converter.rs  linter.rs  mod.rs  renderer.rs  tests.rs  validator.rs
crates/generator/tests/: error_tests.rs  models_tests.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: batch.rs  embeddings.rs  lib.rs  progress.rs  qdrant.rs  service.rs
crates/indexer/src/embeddings/: deterministic.rs  fastembed.rs  google.rs  mod.rs  openai.rs
crates/indexer/src/qdrant/: client.rs  mod.rs  repository.rs  schema.rs
crates/indexer/tests/: test_embeddings.rs  test_qdrant.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: error.rs  lib.rs  models.rs  note_writer.rs  pdf.rs  pipeline.rs  text.rs  web.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: connection.rs  error.rs  lib.rs  manager.rs  persistence.rs  tasks.rs  tests.rs  types.rs
crates/knowledge-graph/: Cargo.toml
crates/knowledge-graph/src/: error.rs  lib.rs  models.rs  query.rs  repository.rs
crates/llm/: Cargo.toml
crates/llm/src/: error.rs  factory.rs  lib.rs  ollama.rs  openrouter.rs  provider.rs  response.rs
crates/obsidian/: Cargo.toml
crates/obsidian/src/: analyzer.rs  error.rs  fuzzing.rs  lib.rs
crates/perf-support/: Cargo.toml
crates/perf-support/src/: error.rs  lib.rs
crates/rag/: Cargo.toml
crates/rag/src/: chunker.rs  error.rs  lib.rs  service.rs  store.rs
crates/search/: Cargo.toml
crates/search/benches/: search_hot_paths.rs
crates/search/src/: error.rs  fts.rs  fusion.rs  lib.rs  repository.rs  reranker.rs  reranking.rs  semantic.rs  service.rs  surface.rs
crates/surface-runtime/: Cargo.toml
crates/surface-runtime/src/: contracts.rs  error.rs  lib.rs  services.rs  workflows.rs
crates/surface-runtime/tests/: generate_preview_test.rs  obsidian_scan_test.rs  tag_audit_test.rs  validation_test.rs
crates/validation/: Cargo.toml
crates/validation/src/: lib.rs  pipeline.rs  quality.rs  validators.rs
crates/validation/tests/: pipeline_tests.rs  quality_tests.rs  validators_tests.rs
fuzz/: Cargo.toml
fuzz/corpus/anki_reader_normalizer/: code_entities.txt  html_and_cloze.txt
fuzz/corpus/card_slug/: basic_slug.txt  unicode_slug.txt
fuzz/corpus/generator_apf_linter/: malformed_card.html  valid_card.html
fuzz/corpus/indexer_sparse_vector/: basic.txt  punctuation.txt
fuzz/corpus/jobs_redis_url/: auth_tls.txt
fuzz/corpus/obsidian_frontmatter/: malformed_frontmatter.md  valid_frontmatter.md
fuzz/corpus/validation_quality/: basic.txt  list_answer.txt
fuzz/fuzz_targets/: anki_reader_normalizer.rs  card_slug.rs  generator_apf_linter.rs  indexer_sparse_vector.rs  jobs_redis_url.rs  obsidian_frontmatter.rs  validation_quality.rs
(+279 files in other folders)
