[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/taxonomy",
  "crates/database",
  "crates/perf-support",
  "crates/anki-reader",
  "crates/anki-sync",
  "crates/indexer",
  "crates/search",
  "crates/analytics",
  "crates/card",
  "crates/validation",
  "crates/llm",
  "crates/obsidian",
  "crates/generator",
  "crates/jobs",
  "crates/surface-contracts",
  "crates/surface-runtime",
  "crates/cardloop",
  "crates/knowledge-graph",
  "crates/ingest",
  "bins/cli",
  "bins/api",
  "bins/mcp",
  "bins/perf-harness",
  "bins/worker",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "json"] }
tower = { version = "0.5", features = ["timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "sqlite", "macros", "chrono", "uuid", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Vector DB
qdrant-client = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# MCP
rmcp = { version = "1.1.1", features = ["transport-io"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
sha2 = "0.10"
url = "2"
strum = { version = "0.28", features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
tempfile = "3"
dotenvy = "0.15"
walkdir = "2"
phf = { version = "0.13", features = ["macros"] }

# Encoding
base64 = "0.22"

# HTML / Markdown
ammonia = "4"
pulldown-cmark = "0.13"

# FSRS algorithm
fsrs = "5.2"

# Local embeddings
fastembed = "4"

# Testing
mockall = "0.14"
assert_matches = "1.5"
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
goose = "0.18.1"
