[package]
name = "anki-atlas-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "anki_atlas_api"
path = "src/lib.rs"

[[bin]]
name = "anki-atlas-api"
path = "src/main.rs"

[dependencies]
analytics = { path = "../../crates/analytics" }
common = { path = "../../crates/common" }
jobs = { path = "../../crates/jobs" }
search = { path = "../../crates/search" }
surface-runtime = { path = "../../crates/surface-runtime" }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
axum-test = "16"
mockall = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
