[package]
name = "anki-atlas-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "anki_atlas_api"
path = "src/lib.rs"

[[bin]]
name = "anki-atlas-api"
path = "src/main.rs"

[dependencies]
common = { path = "../../crates/common" }
jobs = { path = "../../crates/jobs" }
surface-contracts = { path = "../../crates/surface-contracts" }
surface-runtime = { path = "../../crates/surface-runtime" }

anyhow = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
database = { path = "../../crates/database" }
escargot = "0.5"
mockall = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio = { workspace = true }
