[package]
name = "anki-atlas-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "anki-atlas"
path = "src/main.rs"

[dependencies]
analytics = { path = "../../crates/analytics" }
common = { path = "../../crates/common" }
database = { path = "../../crates/database" }
search = { path = "../../crates/search" }
surface-runtime = { path = "../../crates/surface-runtime" }

anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true
