[package]
name = "anki-atlas-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "anki-atlas"
path = "src/main.rs"

[dependencies]
common = { path = "../../crates/common" }
database = { path = "../../crates/database" }
surface-contracts = { path = "../../crates/surface-contracts" }
surface-runtime = { path = "../../crates/surface-runtime" }
card = { path = "../../crates/card" }
cardloop = { path = "../../crates/cardloop" }
validation = { path = "../../crates/validation" }

anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
clap.workspace = true
crossterm = "0.29"
ratatui = "0.30"
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile.workspace = true
