[package]
name = "anki-atlas-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "anki_atlas_mcp"
path = "src/lib.rs"

[[bin]]
name = "anki-atlas-mcp"
path = "src/main.rs"

[dependencies]
common = { path = "../../crates/common" }
obsidian = { path = "../../crates/obsidian" }

rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
