[package]
name = "anki-atlas-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "anki_atlas_mcp"
path = "src/lib.rs"

[[bin]]
name = "anki-atlas-mcp"
path = "src/main.rs"

[dependencies]
common = { path = "../../crates/common" }
jobs = { path = "../../crates/jobs" }
surface-contracts = { path = "../../crates/surface-contracts" }
surface-runtime = { path = "../../crates/surface-runtime" }

rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
