[package]
name = "anki-atlas-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "anki-atlas-worker"
path = "src/main.rs"

[dependencies]
common = { path = "../../crates/common" }
jobs = { path = "../../crates/jobs" }
surface-runtime = { path = "../../crates/surface-runtime" }

rustis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
mockall = { workspace = true }
assert_matches = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
