[package]
name = "analytics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
common = { path = "../common" }
database = { path = "../database" }
indexer = { path = "../indexer" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
fsrs = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
perf-support = { path = "../perf-support" }
tokio = { workspace = true }
mockall = { workspace = true }
tempfile = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

[[bench]]
name = "analytics_hot_paths"
harness = false
