[package]
name = "cardloop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
card = { path = "../card" }
validation = { path = "../validation" }
taxonomy = { path = "../taxonomy" }
obsidian = { path = "../obsidian" }
common = { path = "../common" }
anki-reader = { path = "../anki-reader" }
llm = { path = "../llm" }
fsrs = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
