[package]
name = "common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
config = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
strum = { version = "0.27", features = ["derive"] }
once_cell = "1"

[dev-dependencies]
temp-env = "0.3"
tokio = { version = "1", features = ["full"] }
