[package]
name = "generator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
llm = { path = "../llm" }
taxonomy = { path = "../taxonomy" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
html-escape = "0.2"
ammonia = { workspace = true }
pulldown-cmark = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
