[package]
name = "indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
database = { path = "../database" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
qdrant-client = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
