[package]
name = "indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
qdrant-client = { workspace = true }
sha2 = { workspace = true }
futures = { workspace = true }
fastembed = { workspace = true, optional = true }
base64 = "0.22"
hex = "0.4"
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

[features]
default = []
local-embeddings = ["fastembed"]

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
