[package]
name = "jobs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
async-trait.workspace = true
sqlx = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "sync"] }
tracing.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
mockall.workspace = true
