[package]
name = "obsidian"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
fuzzing = []

[dependencies]
common = { path = "../common" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
