[package]
name = "perf-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
database = { path = "../database" }
indexer = { path = "../indexer" }
jobs = { path = "../jobs" }

thiserror = { workspace = true }
qdrant-client = { workspace = true }
rustis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
