[package]
name = "rag"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
