[package]
name = "search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
database = { path = "../database" }
indexer = { path = "../indexer" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
mockall = { workspace = true }
perf-support = { path = "../perf-support" }
tokio = { workspace = true }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }

[[bench]]
name = "search_hot_paths"
harness = false
